--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,8 +13,8 @@ spring.main.allow-bean-definition-overriding=true
 #
 #####################################
 logging.level.root=INFO
-logging.level.org.hibernate.orm.jdbc.bind=TRACE
-logging.level.org.springframework.jdbc.datasource.init=TRACE
+# logging.level.org.hibernate.orm.jdbc.bind=TRACE
+# logging.level.org.springframework.jdbc.datasource.init=TRACE
 # logging.level.org.springframework.security=TRACE
 
 
@@ -39,9 +39,9 @@ logging.level.org.springframework.jdbc.datasource.init=TRACE
 # spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 # spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MysqlDialect
 
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.show_sql=true
-spring.jpa.properties.hibernate.format_sql=true
+# spring.jpa.show-sql=true
+# spring.jpa.properties.hibernate.show_sql=true
+# spring.jpa.properties.hibernate.format_sql=true
 
 
 #####################################
